bug/fixed overflow issue on the body

--- a/src/UI/Modal/Modal.module.css
+++ b/src/UI/Modal/Modal.module.css
@@ -13,7 +13,7 @@
   top: 20vh;
   left: 5%;
   width: 90%;
-  background-color: white;
+  background-color: rgb(var(--white));
   padding: 1rem;
   border-radius: 14px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
