--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -63,5 +63,5 @@
 
 .actions .button {
   background-color: var(--primary-orange);
-  color: white;
+  color: rgb(var(--white));
 }
