--- a/src/styles/user-style/UserProfile.module.css
+++ b/src/styles/user-style/UserProfile.module.css
@@ -7,8 +7,8 @@
 .action_badge {
   position: absolute;
   border-radius: 50rem;
-  background-color: red;
-  color: white;
+  background-color: var(--warning);
+  color: rgb(var(--white));
   padding: 0.35em 0.65em;
   top: 2px;
   left: 100%;
